Added Strategy APis
